; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/dtc/extr_data.c_data_append_align.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/dtc/extr_data.c_data_append_align.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.data = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @data_append_align(i64 %0, i32 %1) #0 {
  %3 = alloca %struct.data, align 8
  %4 = alloca %struct.data, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = getelementptr inbounds %struct.data, %struct.data* %4, i32 0, i32 0
  store i64 %0, i64* %7, align 8
  store i32 %1, i32* %5, align 4
  %8 = getelementptr inbounds %struct.data, %struct.data* %4, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @ALIGN(i64 %9, i32 %10)
  store i32 %11, i32* %6, align 4
  %12 = load i32, i32* %6, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds %struct.data, %struct.data* %4, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = sub nsw i64 %13, %15
  %17 = getelementptr inbounds %struct.data, %struct.data* %4, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = call i64 @data_append_zeroes(i64 %18, i64 %16)
  %20 = getelementptr inbounds %struct.data, %struct.data* %3, i32 0, i32 0
  store i64 %19, i64* %20, align 8
  %21 = getelementptr inbounds %struct.data, %struct.data* %3, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  ret i64 %22
}

declare dso_local i32 @ALIGN(i64, i32) #1

declare dso_local i64 @data_append_zeroes(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
